--- a/app/views/tasks/list.html.erb
+++ b/app/views/tasks/list.html.erb
@@ -5,4 +5,4 @@
   <%= link_to task.title, task_path(task) %>
   </label>
   <% end %>
-<%= link_to 'Create Task', 'task_path(new)' %>
+<%= link_to 'Create Task', tasks_new_path %>
